c2prj1_cards/grade.txt
Grading at Sun Jul 19 08:38:05 UTC 2020
Compiling cards.c
cards.c:1:24: error: unknown type name ‘card_t’
 void assert_card_valid(card_t c) {
                        ^
cards.c:7:32: error: unknown type name ‘hand_ranking_t’
 const char * ranking_to_string(hand_ranking_t r) {
                                ^
cards.c:22:19: error: unknown type name ‘card_t’
 char value_letter(card_t c) {
                   ^
cards.c:42:18: error: unknown type name ‘card_t’
 char suit_letter(card_t c) {
                  ^
cards.c:52:17: error: unknown type name ‘card_t’
 void print_card(card_t c) {
                 ^
cards.c:59:1: error: unknown type name ‘card_t’
 card_t card_from_letters(char value_let, char suit_let) {
 ^
cards.c: In function ‘card_from_letters’:
cards.c:60:3: error: unknown type name ‘card_t’
   card_t temp;
   ^
cards.c:62:18: error: request for member ‘value’ in something not a structure or union
   case '2' : temp.value = 2; break;
                  ^
cards.c:63:18: error: request for member ‘value’ in something not a structure or union
   case '3' : temp.value = 3; break;
                  ^
cards.c:64:18: error: request for member ‘value’ in something not a structure or union
   case '4' : temp.value = 4; break;
                  ^
cards.c:65:18: error: request for member ‘value’ in something not a structure or union
   case '5' : temp.value = 5; break;
                  ^
cards.c:66:18: error: request for member ‘value’ in something not a structure or union
   case '6' : temp.value = 6; break;
                  ^
cards.c:67:18: error: request for member ‘value’ in something not a structure or union
   case '7' : temp.value = 7; break;
                  ^
cards.c:68:18: error: request for member ‘value’ in something not a structure or union
   case '8' : temp.value = 8; break;
                  ^
cards.c:69:18: error: request for member ‘value’ in something not a structure or union
   case '9' : temp.value = 9; break;
                  ^
cards.c:70:18: error: request for member ‘value’ in something not a structure or union
   case '0' : temp.value = 10; break;
                  ^
cards.c:71:18: error: request for member ‘value’ in something not a structure or union
   case 'J' : temp.value = VALUE_JACK; break;
                  ^
cards.c:71:27: error: ‘VALUE_JACK’ undeclared (first use in this function)
   case 'J' : temp.value = VALUE_JACK; break;
                           ^
cards.c:71:27: note: each undeclared identifier is reported only once for each function it appears in
cards.c:72:18: error: request for member ‘value’ in something not a structure or union
   case 'Q' : temp.value = VALUE_QUEEN; break;
                  ^
cards.c:72:27: error: ‘VALUE_QUEEN’ undeclared (first use in this function)
   case 'Q' : temp.value = VALUE_QUEEN; break;
                           ^
cards.c:73:18: error: request for member ‘value’ in something not a structure or union
   case 'K' : temp.value = VALUE_KING; break;
                  ^
cards.c:73:27: error: ‘VALUE_KING’ undeclared (first use in this function)
   case 'K' : temp.value = VALUE_KING; break;
                           ^
cards.c:74:18: error: request for member ‘value’ in something not a structure or union
   case 'A' : temp.value = VALUE_ACE; break;
                  ^
cards.c:74:27: error: ‘VALUE_ACE’ undeclared (first use in this function)
   case 'A' : temp.value = VALUE_ACE; break;
                           ^
cards.c:77:18: error: request for member ‘suit’ in something not a structure or union
   case 's' : temp.suit = SPADES; break;
                  ^
cards.c:77:26: error: ‘SPADES’ undeclared (first use in this function)
   case 's' : temp.suit = SPADES; break;
                          ^
cards.c:78:18: error: request for member ‘suit’ in something not a structure or union
   case 'h' : temp.suit = HEARTS; break;
                  ^
cards.c:78:26: error: ‘HEARTS’ undeclared (first use in this function)
   case 'h' : temp.suit = HEARTS; break;
                          ^
cards.c:79:18: error: request for member ‘suit’ in something not a structure or union
   case 'd' : temp.suit = DIAMONDS; break;
                  ^
cards.c:79:26: error: ‘DIAMONDS’ undeclared (first use in this function)
   case 'd' : temp.suit = DIAMONDS; break;
                          ^
cards.c:80:18: error: request for member ‘suit’ in something not a structure or union
   case 'c' : temp.suit = CLUBS; break;
                  ^
cards.c:80:26: error: ‘CLUBS’ undeclared (first use in this function)
   case 'c' : temp.suit = CLUBS; break;
                          ^
cards.c:82:3: error: implicit declaration of function ‘assert_card_valid’ [-Werror=implicit-function-declaration]
   assert_card_valid(temp);
   ^
cards.c: At top level:
cards.c:86:1: error: unknown type name ‘card_t’
 card_t card_from_num(unsigned c) {
 ^
cards.c: In function ‘card_from_num’:
cards.c:87:3: error: unknown type name ‘card_t’
   card_t temp;
   ^
cards.c:88:7: error: request for member ‘value’ in something not a structure or union
   temp.value = (c / 4) + 2;
       ^
cards.c:89:7: error: request for member ‘suit’ in something not a structure or union
   temp.suit = c % 4;
       ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
